tegel/src/components/button/button-theme-vars.scss
:root,
.sdds-theme-light {
  //Primary
  --sdds-btn-primary-background: var(--sdds-blue-600);
  --sdds-btn-primary-color: var(--sdds-white);
  --sdds-btn-primary-border-color: transparent;
  --sdds-btn-primary-background-hover: var(--sdds-blue-500);
  --sdds-btn-primary-color-hover: var(--sdds-white);
  --sdds-btn-primary-border-color-hover: transparent;
  --sdds-btn-primary-background-active: var(--sdds-blue-700);
  --sdds-btn-primary-color-active: var(--sdds-white);
  --sdds-btn-primary-border-color-active: transparent;
  --sdds-btn-primary-background-focus: var(--sdds-blue-400);
  --sdds-btn-primary-color-focus: var(--sdds-white);
  --sdds-btn-primary-border-color-focus: var(--sdds-blue-600);
  --sdds-btn-primary-outline-color-focus: var(--sdds-blue-600);
  --sdds-btn-primary-background-disabled: var(--sdds-white);
  --sdds-btn-primary-color-disabled: var(--sdds-grey-400);
  --sdds-btn-primary-border-color-disabled: transparent;

  /* ICON */
  --sdds-btn-icon-primary-fill: var(--sdds-grey-50);
  --sdds-btn-icon-primary-color: var(--sdds-grey-50);

  //Primary - On white
  --sdds-btn-primary-on-white-background-disabled: var(--sdds-grey-50);
  --sdds-btn-danger-on-white-background-disabled: var(--sdds-grey-50);

  //Secondary
  --sdds-btn-secondary-background: transparent;
  --sdds-btn-secondary-color: var(--sdds-black);
  --sdds-btn-secondary-border-color: rgb(0 0 0 / 38%);
  --sdds-btn-secondary-background-hover: var(--sdds-blue-500);
  --sdds-btn-secondary-color-hover: var(--sdds-white);
  --sdds-btn-secondary-border-color-hover: var(--sdds-blue-500);
  --sdds-btn-secondary-background-active: transparent;
  --sdds-btn-secondary-color-active: var(--sdds-black);
  --sdds-btn-secondary-border-color-active: rgb(0 0 0 / 87%);
  --sdds-btn-secondary-background-focus: transparent;
  --sdds-btn-secondary-color-focus: var(--sdds-black);
  --sdds-btn-secondary-border-color-focus: var(--sdds-blue-300);
  --sdds-btn-secondary-outline-color: rgb(0 0 0 / 38%);
  --sdds-btn-secondary-background-disabled: transparent;
  --sdds-btn-secondary-color-disabled: rgb(0 0 0 / 38%);
  --sdds-btn-secondary-border-color-disabled: rgb(0 0 0 / 38%);

  /* ICON */
  --sdds-btn-icon-secondary-fill: var(--sdds-black);
  --sdds-btn-icon-secondary-color: var(--sdds-black);

  /* ICON HOVER */
  --sdds-btn-icon-secondary-fill-hover: var(--sdds-grey-50);
  --sdds-btn-icon-secondary-color-hover: var(--sdds-grey-50);

  /* ICON FOCUS */
  --sdds-btn-icon-secondary-fill-focus: var(--sdds-black);
  --sdds-btn-icon-secondary-color-focus: var(--sdds-black);

  //Ghost
  --sdds-btn-ghost-background: transparent;
  --sdds-btn-ghost-color: var(--sdds-black);
  --sdds-btn-ghost-border-color: transparent;
  --sdds-btn-ghost-background-hover: transparent;
  --sdds-btn-ghost-color-hover: var(--sdds-black);
  --sdds-btn-ghost-border-color-hover: rgb(0 0 0 / 60%);
  --sdds-btn-ghost-outline-color-hover: rgb(0 0 0 / 60%);
  --sdds-btn-ghost-background-active: transparent;
  --sdds-btn-ghost-color-active: var(--sdds-black);
  --sdds-btn-ghost-border-color-active: rgb(0 0 0 / 87%);
  --sdds-btn-ghost-background-focus: transparent;
  --sdds-btn-ghost-color-focus: var(--sdds-black);
  --sdds-btn-ghost-border-color-focus: var(--sdds-blue-300);
  --sdds-btn-ghost-outline-color-focus: var(--sdds-blue-300);
  --sdds-btn-ghost-background-disabled: transparent;
  --sdds-btn-ghost-color-disabled: rgb(0 0 0 / 38%);
  --sdds-btn-ghost-border-color-disabled: transparent;

  /* ICON */
  --sdds-btn-icon-ghost-fill: var(--sdds-black);
  --sdds-btn-icon-ghost-color: var(--sdds-black);

  //Danger
  --sdds-btn-danger-background: var(--sdds-negative);
  --sdds-btn-danger-color: var(--sdds-white);
  --sdds-btn-danger-border-color: transparent;
  --sdds-btn-danger-background-hover: var(--sdds-red-600);
  --sdds-btn-danger-color-hover: var(--sdds-white);
  --sdds-btn-danger-border-color-hover: transparent;
  --sdds-btn-danger-background-active: var(--sdds-red-700);
  --sdds-btn-danger-color-active: var(--sdds-white);
  --sdds-btn-danger-border-color-active: transparent;
  --sdds-btn-danger-background-focus: var(--sdds-red-400);
  --sdds-btn-danger-color-focus: var(--sdds-white);
  --sdds-btn-danger-border-color-focus: var(--sdds-red-400);
  --sdds-btn-danger-outline-color-focus: var(--sdds-red-700);
  --sdds-btn-danger-background-disabled: var(--sdds-white);
  --sdds-btn-danger-color-disabled: rgb(0 0 0 / 38%);
  --sdds-btn-danger-border-color-disabled: transparent;

  /* ICON */
  --sdds-btn-icon-danger-fill: var(--sdds-white);
  --sdds-btn-icon-danger-color: var(--sdds-white);
}

.sdds-theme-dark {
  //Primary
  --sdds-btn-primary-background: var(--sdds-blue-400);
  --sdds-btn-primary-background-hover: var(--sdds-blue-500);
  --sdds-btn-primary-background-active: var(--sdds-blue-300);
  --sdds-btn-primary-background-focus: var(--sdds-blue-600);
  --sdds-btn-primary-border-color-focus: var(--sdds-blue-400);
  --sdds-btn-primary-outline-color-focus: var(--sdds-blue-400);
  --sdds-btn-primary-background-disabled: var(--sdds-grey-868);
  --sdds-btn-primary-color-disabled: var(--sdds-grey-600);

  /* ICON */
  --sdds-btn-icon-primary-fill: var(--sdds-grey-50);
  --sdds-btn-icon-primary-color: var(--sdds-grey-50);

  //Primary - On white
  --sdds-btn-primary-on-white-background-disabled: var(--sdds-grey-50);
  --sdds-btn-danger-on-white-background-disabled: var(--sdds-grey-50);

  //Secondary
  --sdds-btn-secondary-background: transparent;
  --sdds-btn-secondary-color: var(--sdds-white);
  --sdds-btn-secondary-border-color: var(--sdds-white);
  --sdds-btn-secondary-background-hover: var(--sdds-blue-500);
  --sdds-btn-secondary-color-hover: var(--sdds-white);
  --sdds-btn-secondary-border-color-hover: var(--sdds-blue-500);
  --sdds-btn-secondary-background-active: transparent;
  --sdds-btn-secondary-color-active: var(--sdds-white);
  --sdds-btn-secondary-border-color-active: var(--sdds-white);
  --sdds-btn-secondary-background-focus: transparent;
  --sdds-btn-secondary-color-focus: var(--sdds-white);
  --sdds-btn-secondary-border-color-focus: var(--sdds-blue-300);
  --sdds-btn-secondary-outline-color: var(--sdds-white);
  --sdds-btn-secondary-outline-color-focus: var(--sdds-blue-300);
  --sdds-btn-secondary-background-disabled: transparent;
  --sdds-btn-secondary-color-disabled: rgb(255 255 255 / 38%);
  --sdds-btn-secondary-border-color-disabled: rgb(255 255 255 / 38%);

  /* ICON */
  --sdds-btn-icon-secondary-fill: var(--sdds-black);
  --sdds-btn-icon-secondary-color: var(--sdds-black);

  //Ghost
  --sdds-btn-ghost-background: transparent;
  --sdds-btn-ghost-color: var(--sdds-white);
  --sdds-btn-ghost-border-color: transparent;
  --sdds-btn-ghost-background-hover: transparent;
  --sdds-btn-ghost-color-hover: var(--sdds-white);
  --sdds-btn-ghost-border-color-hover: rgb(255 255 255 / 41%);
  --sdds-btn-ghost-outline-color-hover: rgb(255 255 255 / 41%);
  --sdds-btn-ghost-background-active: transparent;
  --sdds-btn-ghost-color-active: var(--sdds-white);
  --sdds-btn-ghost-border-color-active: rgb(255 255 255 / 87%);
  --sdds-btn-ghost-background-focus: transparent;
  --sdds-btn-ghost-color-focus: var(--sdds-white);
  --sdds-btn-ghost-border-color-focus: var(--sdds-blue-300);
  --sdds-btn-ghost-outline-color-focus: var(--sdds-blue-300);
  --sdds-btn-ghost-background-disabled: transparent;
  --sdds-btn-ghost-color-disabled: rgb(255 255 255/ 38%);
  --sdds-btn-ghost-border-color-disabled: transparent;

  /* ICON */
  --sdds-btn-icon-ghost-fill: var(--sdds-black);
  --sdds-btn-icon-ghost-color: var(--sdds-black);

  //Danger
  --sdds-btn-danger-background: var(--sdds-negative);
  --sdds-btn-danger-color: var(--sdds-white);
  --sdds-btn-danger-border-color: transparent;
  --sdds-btn-danger-background-hover: var(--sdds-red-600);
  --sdds-btn-danger-color-hover: var(--sdds-white);
  --sdds-btn-danger-border-color-hover: transparent;
  --sdds-btn-danger-background-active: var(--sdds-red-700);
  --sdds-btn-danger-color-active: var(--sdds-white);
  --sdds-btn-danger-border-color-active: transparent;
  --sdds-btn-danger-background-focus: var(--sdds-red-400);
  --sdds-btn-danger-color-focus: var(--sdds-white);
  --sdds-btn-danger-border-color-focus: var(--sdds-red-400);
  --sdds-btn-danger-outline-color-focus: var(--sdds-red-700);
  --sdds-btn-danger-background-disabled: var(--sdds-grey-868);
  --sdds-btn-danger-color-disabled: rgb(255 255 255 / 38%);
  --sdds-btn-danger-border-color-disabled: transparent;

  /* ICON */
  --sdds-btn-icon-danger-fill: var(--sdds-black);
  --sdds-btn-icon-danger-color: var(--sdds-black);
}

